// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with default props 1`] = `
<Fragment>
  <WithStyles(ForwardRef(CardMedia))
    image="https://image.tmdb.org/t/p/w300/undefined"
    style={
      Object {
        "height": 450,
        "width": 300,
      }
    }
  />
  <WithStyles(ForwardRef(Rating))
    name="half-rating"
    precision={0.5}
    value={NaN}
  />
  <WithStyles(ForwardRef(Typography))
    component="h2"
    gutterBottom={true}
    variant="headline"
  >
    Title: 
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Typography))
    component="h2"
    gutterBottom={true}
    variant="headline"
  >
    Description: 
  </WithStyles(ForwardRef(Typography))>
</Fragment>
`;

exports[`should render correctly with mocked props 1`] = `
<Fragment>
  <WithStyles(ForwardRef(CardMedia))
    image="https://image.tmdb.org/t/p/w300//udDclJoHjfjb8Ekgsd4FDteOkCU.jpg"
    style={
      Object {
        "height": 450,
        "width": 300,
      }
    }
  />
  <WithStyles(ForwardRef(Rating))
    name="half-rating"
    precision={0.5}
    value={4.35}
  />
  <WithStyles(ForwardRef(Typography))
    component="h2"
    gutterBottom={true}
    variant="headline"
  >
    Title: 
    Joker
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Typography))
    component="h2"
    gutterBottom={true}
    variant="headline"
  >
    Description: 
    overview
  </WithStyles(ForwardRef(Typography))>
</Fragment>
`;
